--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Bottle Rocket Coding Challenge</title>
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src='bundle.js'></script>
+    <script src='./frontend/bundle.js'></script>
   </head>
   <body>
     <main id='root'>
