Restaurants get added to store, but its nested wrong

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bottle Rocket Coding Challenge</title>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./frontend/styles/styles.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src='./frontend/bundle.js'></script>
   </head>
