--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bottle Rocket Coding Challenge</title>
+    <link rel="stylesheet" href="./frontend/styles/reset.css">
     <link rel="stylesheet" href="./frontend/styles/styles.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src='./frontend/bundle.js'></script>
