--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8">
     <title>Bottle Rocket Coding Challenge</title>
     <link rel="stylesheet" href="./frontend/styles/reset.css">
