Google maps shows up

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <main id='root'>
       You broke it :(
     </main>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuBcjx8q63oAgLk3_4UC0397Kh3d_9LkI&callback=initMap">
+    </script>
   </body>
 </html>
